fix: align content in zoogeography block

--- a/online-zoo/pages/landing/landing.css
+++ b/online-zoo/pages/landing/landing.css
@@ -1392,11 +1392,19 @@ header {
   }
   .zoogeography {
     width: 100%;
+    height: auto;
+    padding: 100px 0 100px 0;
+    justify-content: flex-start;
+    margin-left: 74px;
   }
   .zoogeography__animal-wrapper {
     width: 292px;
     height: 532px;
-    margin: 100px 24px 0 0;
+    margin: 0 0 0 0;
+  }
+  .zoogeography__animal-photo {
+    height: 196px;
+    object-position: -4px;
   }
   .zoogeography__animal {
     width: 292px;
@@ -1406,7 +1414,7 @@ header {
     width: 675px;
     height: 389px;
     background-size: 675px 389px;
-    margin: 50px 22px 0 0;
+    margin: 86px 0 0 9px;
   }
   .zoogeography__h2 {
     font-size: 20px;
@@ -1424,45 +1432,54 @@ header {
     line-height: 19px;
   }
   .zoogeography__animal-info {
-    padding: 20px 40px 55px;
+    padding: 20px 17px 44px;
     height: 254px;
   }
   .zoogeography__mark_deactive:hover .zoogeography__svg-mark {
-    width: 140px;
-    height: 168px;
+    width: 80px;
+    height: auto;
   }
   .zoogeography__mark_active .zoogeography__svg-mark {
-    width: 140px;
-    height: 168px;
+    width: 80px;
+    height: auto;
+  }
+  .zoogeography__svg-mark {
+    width: 65px;
+    height: auto;
   }
   .zoogeography__mark_item1 {
-    top: 325px;
-    left: 174px;
+    top: 181px;
+    left: 98px;
   }
   .zoogeography__mark_item2 {
-    top: 337px;
-    left: 305px;
+    top: 189px;
+    left: 169px;
   }
   .zoogeography__mark_item3 {
-    top: 461px;
-    left: 0;
+    top: 241px;
+    left: 329px;
   }
   .zoogeography__mark_item4 {
-    top: 325px;
-    left: 0;
+    top: 179px;
+    left: 512px;
   }
   .zoogeography__mark-animal {
     top: 33%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 24px;
+    height: auto;
+  }
+  .zoogeography__tranansition {
+    transition: all .5s;
   }
   .zoogeography__mark_deactive:hover .zoogeography__mark-animal {
-    height: 67px; 
-    width: 67px;
+    height: auto; 
+    width: 30px;
   }
   .zoogeography__mark_active .zoogeography__mark-animal {
-    height: 67px;
-    width: 67px;
+    height: auto;
+    width: 30px;
   }
   .footer {
     max-width: 1800px;
